--- a/src/main/resources/static/game_hall.html
+++ b/src/main/resources/static/game_hall.html
@@ -23,7 +23,7 @@
 
     <script src="js/jquery.min.js"></script>
     <script>
-        // 页面加载的时候，发送的请求。
+        // 页面加载的时候，发送的请求。从服务器获取玩家信息，再返回前端页面
         $.ajax({
             type: 'get',
             url: '/userInfo',
@@ -50,7 +50,7 @@
             // 之前为了实现多开的效果，在这个逻辑中加入了 alert 和跳转。
             // 如果多开了，服务器就会主动关闭 websocket 连接，导致客户端跳转到 login.html 页面
             alert("和游戏大厅断开连接");
-            loation.assign("/login.html");
+            loation.replace("/login.html");
         }
 
         websocket.onerror = function() {
@@ -89,7 +89,12 @@
             } else if (rep.message == 'matchSuccess') {
                 // 已经匹配到对手了
                 console.log("匹配到对手，进入游戏房间");
-                location.assign("/game_room.html");
+                // 防止用户回退操作
+                // location.assign("/game_room.html");
+                // 当前页面，不会入栈，就不会造成回退时候，页面的误操作
+                location.replace("/game_room.html");   
+            } else if (resp.message == 'repeatConnection') {
+                alert("当前检测到多开，请使用其他账号登录！");
             } else {
                 console.log("收到了非法的响应！message = " + resp.message);
             }
@@ -121,7 +126,8 @@
             } else {
                 // 这是说明，连接当前是异常的状态
                 alert("当前连接已经断开！请重新登录。");
-                location.assign('/login.html');
+                // 不会回到上一页页面
+                location.replace('/login.html');
             }
         } 
     </script>
