--- a/src/main/resources/static/game_room.html
+++ b/src/main/resources/static/game_room.html
@@ -18,7 +18,7 @@
             <canvas id="chess" width="450px" height="450px">
 
             </canvas>
-            <!-- 显示区域，初始值为“等待玩家连接中” -->
+            <!-- 显示区域，提示作用，初始值为“等待玩家连接中” -->
             <div id="screen"> 等待玩家连接中... </div>
         </div>
     </div>
