use JS canvas to draw board and chess pieces

--- a/src/main/resources/static/game_room.html
+++ b/src/main/resources/static/game_room.html
@@ -22,6 +22,7 @@
             <div id="screen"> 等待玩家连接中... </div>
         </div>
     </div>
+    <!-- 引入自己写的js, 是关于棋盘的信息 -->
     <script src="js/script.js"></script>
 </body>
 </html>
